removed placeholder text

--- a/portfolio.html
+++ b/portfolio.html
@@ -175,9 +175,7 @@
             <div class="text">
               <p><b>Project 1</b></p>
         </a>
-        <p><b>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas perferendis necessitatibus odio ex. Quam
-            exercitationem est officiis quaerat commodi, nihil eum, cumque sit temporibus quo reprehenderit ipsum eaque
-            corrupti esse.</b></p>
+        <p><b>Project description coming soon</b></p>
       </div>
     </div>
 
