--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
         <a class="label" href="index.html"><b>P H I L A N I M T E M B U</b></p>
       </div>
       <div class=" topnav collapse navbar-collapse navbar-right nav navbar-nav" id="myNavbar">
-        <a class="active navbar-brand" href="#"><b>ABOUT</b></a>
-        <a class="navbar-brand" href="skills.html"><b>SKILLS</b></a>
-        <a class="navbar-brand" href="portfolio.html"><b>PORTFOLIO</b></a>
-        <a class="navbar-brand" href="contact.html">
+        <a class="active nav-link"" href=" #"><b>ABOUT</b></a>
+        <a class="nav-link" href="skills.html"><b>SKILLS</b></a>
+        <a class="nav-link" href="portfolio.html"><b>PORTFOLIO</b></a>
+        <a class="nav-link" href="contact.html">
           <font color="#880808"><b>CONTACT</b></font>
         </a>
       </div>
