--- a/index.html
+++ b/index.html
@@ -136,15 +136,25 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="label" href="index.html"><b>P H I L A N I M T E M B U</b></p>
+        <a class="label" href="index.html"><b>P H I L A N I M T E M B U</b></a>
       </div>
-      <div class=" topnav collapse navbar-collapse navbar-right nav navbar-nav" id="myNavbar">
-        <a class="active nav-link"" href=" #"><b>ABOUT</b></a>
-        <a class="nav-link" href="skills.html"><b>SKILLS</b></a>
-        <a class="nav-link" href="portfolio.html"><b>PORTFOLIO</b></a>
-        <a class="nav-link" href="contact.html">
-          <font color="#880808"><b>CONTACT</b></font>
-        </a>
+      <div class="topnav collapse navbar-collapse navbar-right nav navbar-nav" id="myNavbar">
+        <ul class="nav navbar-nav navbar-right">
+          <li class="nav-item">
+            <a class="active nav-link" href="#"><b>ABOUT</b></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="skills.html"><b>SKILLS</b></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="portfolio.html"><b>PORTFOLIO</b></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">
+              <font color="#880808"><b>CONTACT</b></font>
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
   </nav>
