--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
     .jumbotron {
       font-family: Montserrat Medium, sans-serif;
       background-color: transparent;
-      colour: black;
+      color: black;
     }
 
     .red {
@@ -131,15 +131,25 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="label" href="index.html"><b>P H I L A N I M T E M B U</b></p>
+        <a class="label" href="index.html"><b>P H I L A N I M T E M B U</b></a>
       </div>
       <div class=" topnav collapse navbar-collapse navbar-right nav navbar-nav" id="myNavbar">
-        <a class="navbar-brand" href="index.html"><b>ABOUT</b></a>
-        <a class="navbar-brand" href="skills.html"><b>SKILLS</b></a>
-        <a class="navbar-brand" href="portfolio.html"><b>PORTFOLIO</b></a>
-        <a class=" active navbar-brand" href="#">
-          <font color="#880808"><b>CONTACT</b></font>
-        </a>
+        <ul class="nav navbar-nav navbar-right">
+          <li class="nav-item">
+            <a class="navbar-brand" href="index.html"><b>ABOUT</b></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="skills.html"><b>SKILLS</b></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="portfolio.html"><b>PORTFOLIO</b></a>
+          </li>
+          <li class="nav-item">
+            <a class=" active navbar-brand" href="#">
+              <font color="#880808"><b>CONTACT</b></font>
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
   </nav>
