--- a/portfolio.html
+++ b/portfolio.html
@@ -119,7 +119,8 @@
     .container {
       display: flex;
       align-items: center;
-      justify-content: center
+      justify-content: center;
+      width: 100%;
     }
 
     img {
@@ -177,18 +178,19 @@
     <div class="container-fluid bg-3 text-left">
       <h3><b>These are some of the projects I've worked on.<b></h3><br>
       <div class="row">
-        <a style="color:#b15454" href="#" target="_blank">
-          <div class="container">
-            <div class="image">
-              <img src="project.jpg" class="image_responsive" alt="Image">
-            </div>
-            <div class="text">
-              <p><b>Project 1</b></p>
-        </a>
-        <p><b>Project description coming soon</b></p>
+        <div class="container">
+          <div class="image col-sm-3 hidden-xs">
+            <img src="project.jpg" class="image_responsive" alt="Image">
+          </div>
+          <div class="text">
+            <p><a href="https://github.com/Philani1/pomodoro"><b>Pomodoro Technique Python Project</b></a></p>
+            <p><b>This project implements a time management method that aims to maximize productivity through focused
+                sessions of work. Tasks are divided in intervals of 25 minutes, also called a pomodoro session. After
+                each interval, the worker takes a short break for about 5 minutes. </b></p>
+          </div>
+        </div>
       </div>
     </div>
-
 </body>
 <footer class="container-fluider">
   <p style="font-size:14px;color:#888888"><b> © 2 0 2 2</b>
